# Jiranon-dagster-de-test-2025

./: .env  .env.example  .gitignore  Dockerfile  README.md  dagster.yaml  docker-compose.yaml  pyproject.toml  workspace.yaml
dagster_pipelines/: assets.py  definitions.py  schedules.py
dagster_pipelines/data/: KPI_FY.xlsm  M_Center.csv
dagster_pipelines/db/: plan.db
dagster_pipelines/etl/: extract.py  load.py  transform.py
