[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dagster-pipelines"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "dagster",
    "dagster-webserver",
    "dagster-postgres",
    "dagster-duckdb",
    "pandas",
]

[tool.setuptools.packages.find]
exclude = ["dagster_pipelines_tests"]

[tool.dagster]
module_name = "dagster_pipelines.definitions"
code_location_name = "dagster_pipelines"